small spacing issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -70,7 +70,7 @@ html {
 
 .content-text {
   width: 60%;
-  margin: 30px 0;
+  margin: 24px 0;
   display: flex;
   justify-content: center;
 }
